--- a/app/views/markers/edit.html.erb
+++ b/app/views/markers/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing marker</h1>
-
+<center>
+<h1> Edit Bridge Details </h1>
 <%= render 'form' %>
 
-<%= link_to 'Show', @marker %> |
-<%= link_to 'Back', markers_path %>
+</center>
