--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -40,7 +40,7 @@
    <% end %>
   
      <div class="field">
-      Car image uploader:
+      Car image uploader: <br />
        <%= f.file_field :carImageUploader %>
   </div>
    
