--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -19,7 +19,7 @@ var map;
 //routeboxer
 var boxpolys = null;
 var routeBoxer = null;
-var distance = 5 * 0.609344;
+var distance = 1;
 
 var middleMap = new google.maps.LatLng(53.424878,-7.940766);
 
@@ -31,7 +31,10 @@ function initialize() {
     center: middleMap,
     scrollwheel: false
   };
+
+
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+  
        routeBoxer = new RouteBoxer();
 
   
@@ -47,6 +50,60 @@ function initialize() {
 
 
 function calcRoute() {
+  <% @markers.each do |m| %>                  
+    var bridge = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);
+    var myHeight = <%= m.height %>;
+    var markerz = new google.maps.Marker({position:bridge});
+    markerz.setMap(map);
+
+
+
+ 
+  <% end %>
+
+
+//Test marker
+   var myLatlng = new google.maps.LatLng(51.912141, -8.184274);
+   var marker1 = new google.maps.Marker({position: myLatlng, map:map});
+
+
+  for (var i = 0; i < boxes.length; i++) {
+if(google.maps.geometry.poly.containsLocation(myLatlng, withinBox)){
+  var infowindow = new google.maps.InfoWindow({content: "There is a bridge along your route!"});
+      infowindow.open(map, marker1);
+    alert("WIN");
+    }
+    else {
+      console.log("error" + bridge);
+
+    }
+
+ var northeast = boxes[i].getNorthEast();
+ var southwest = boxes[i].getSouthWest();
+ var lat_north = northeast.lat();
+ var long_east = northeast.lng();
+ var lat_south = southwest.lat();
+ var long_west = southwest.lng();
+
+var latlng1 =  new google.maps.LatLng(lat_south, long_west);
+var latlng2 = new google.maps.LatLng(lat_south, long_east);
+var latlng3 = new google.maps.LatLng(lat_north, long_east);
+var latlng4 = new google.maps.LatLng(lat_north, long_west);
+
+
+var myBox = [latlng1, latlng2, latlng3, latlng4];
+
+
+var bounds = new google.maps.LatLngBounds(southwest, northeast);
+
+var withinBox = new google.maps.Polygon({
+    paths: myBox
+  });
+
+
+}
+
+
 //routeboxer
  clearBoxes();
 
@@ -70,52 +127,13 @@ function calcRoute() {
        var path = response.routes[0].overview_path;
        var boxes = routeBoxer.box(path, distance);
           drawBoxes(boxes);
-      //document.getElementById('points').innerHTML = "<b>Points along this route:  (" + path.length + " total</b>)"+ path;
-      document.getElementById('boxes').innerHTML = "<b>Boxes along this route:  (" + boxes.length + " total</b>)"+ boxes;
+      document.getElementById('points').innerHTML = "<b>Points along this route:  (" + path.length + " total</b>)"; //+ path;
+      document.getElementById('boxes').innerHTML = "<b>Boxes along this route:  (" + boxes.length + " total</b>)"; + boxes;
 
 
-var myLatlng = new google.maps.LatLng(53.607495, -7.098758);
-   var marker = new google.maps.Marker({position: myLatlng, map:map});
 
-for (var i = 0; i < boxes.length; i++) {
-
-
- var northeast = boxes[i].getNorthEast();
- var southwest = boxes[i].getSouthWest();
- var lat_north = northeast.lat();
- var long_east = northeast.lng();
- var lat_south = southwest.lat();
- var long_west = southwest.lng();
-
-var latlng1 =  new google.maps.LatLng(lat_south, long_west);
-var latlng2 = new google.maps.LatLng(lat_south, long_east);
-var latlng3 = new google.maps.LatLng(lat_north, long_west);
-var latlng4 = new google.maps.LatLng(lat_north, long_east);
-
-var myBox = [latlng1, latlng2, latlng3, latlng4 ];
-
-   var marker = new google.maps.Marker({position: latlng1, map:map});
-   var marker = new google.maps.Marker({position: latlng2, map:map});
-   var marker = new google.maps.Marker({position: latlng3, map:map});
-   var marker = new google.maps.Marker({position: latlng4, map:map});
-
-var bounds = new google.maps.LatLngBounds(southwest, northeast);
-
-var bermudaTriangle = new google.maps.Polygon({
-    paths: myBox
-  });
-
-
-var center = new google.maps.LatLng(southwest, northeast);
-if (bounds.contains(myLatlng) ) {
-      document.getElementById('points').innerHTML = "<b>SUCCESS!!: " + center + "</b>";
-    } else {
-      document.getElementById('points').innerHTML = "<b>FAIL: " + center + "</b>";
-    }
-}
-alert(bounds);
 });
-  //routeboxer
+
   function drawBoxes(boxes) {
       boxpolys = new Array(boxes.length);
       for (var i = 0; i < boxes.length; i++) {
@@ -166,9 +184,9 @@ function computeTotalDistance(result) {
 
   <H2>  Please enter your starting point and destination </H2>
   <form id= "routeform"> <b>
-      <label for="start">Start point:</label><input type="text" id="start" value="Mullingar"> <br>
-      <label for="stop">Stop point:</label><input type="text" id="stop" value="Delvin"> <br>
-      <label for="dest">Destination:</label><input type="text" id="dest" value="Athboy">  <br>
+      <label for="start">Start point:</label><input type="text" id="start" value="Cork"> <br>
+      <label for="stop">Stop point:</label><input type="text" id="stop" value="Midleton"> <br>
+      <label for="dest">Destination:</label><input type="text" id="dest" value="Waterford">  <br>
   </b></form>
   </div>
   <p id="p2"><b><span id="total"></span></b></p>
