--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,13 +34,12 @@ map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
      bridgeType =  '<th scope="row">Height:</th>  <td id= "mytd">' + myHeight +' m </td>'
          }
 
-
 var contentString = '<div class="infowin">' +
         '<h5 id="h5style">Bridge Details</h5>' +
         '<table class = "infotable" width="190" border="0" cellpadding="0" cellspacing="3">' +
         '<tr>' +
          '<th scope="row">Address:</th>' +
-      '<td>' + "ERROR" + '</td>' +
+      '<td>' + "county" + '</td>' +
       '</tr>' +
       '<th scope="row">County:</th>' +
       '<td>' + "ERROR" + '</td>' +
