routing based on vehicle height working and Admin working

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -149,7 +149,7 @@ body {
 #h5style {
   font-family: 'Seymour One', sans-serif;
   font-size: 12pt;
-  color: #0A2A1B;
+  color: #FF0000;
   padding-top: 3px;
   padding-bottom: 0px;
 }
