--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,14 +1,22 @@
-<h1>Contact</h1>
+<h1>Help </h1>
+<br>
 
-<p>Email: help@routeplannerpro.com </p>
+ <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Route Planner Pro</title>
+
+
+<p>The map below shows a map containing every bridge location in the Republic of Ireland</p>
+<%= image_tag("bridge1.png", :size => "350x450") %>
+   
+
 
 <center>
 <h1>Plan you journey</h1>
 
- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/routeboxer/src/RouteBoxer.js" type="text/javascript"></script>
-
-
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+<script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/routeboxer/src/RouteBoxer.js" type="text/javascript"></script>
 <script>
 var rendererOptions = {
   draggable: true
@@ -20,27 +28,19 @@ var map;
 var boxpolys = null;
 var routeBoxer = null;
 var distance = 1;
-
 var middleMap = new google.maps.LatLng(53.424878,-7.940766);
 
-
 function initialize() {
-
   var mapOptions = {
     zoom: 7,
     center: middleMap,
     scrollwheel: false
   };
 
-
   map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-  
-       routeBoxer = new RouteBoxer();
-
-  
+  routeBoxer = new RouteBoxer();
   directionsDisplay.setMap(map);
   directionsDisplay.setPanel(document.getElementById('directionsPanel'));
-
 
   google.maps.event.addListener(directionsDisplay, 'directions_changed', function() {
     computeTotalDistance(directionsDisplay.getDirections());
@@ -56,54 +56,8 @@ function calcRoute() {
     var markerz = new google.maps.Marker({position:bridge});
     markerz.setMap(map);
 
-
-
  
   <% end %>
-
-
-//Test marker
-   var myLatlng = new google.maps.LatLng(51.912141, -8.184274);
-   var marker1 = new google.maps.Marker({position: myLatlng, map:map});
-
-
-  for (var i = 0; i < boxes.length; i++) {
-if(google.maps.geometry.poly.containsLocation(myLatlng, withinBox)){
-  var infowindow = new google.maps.InfoWindow({content: "There is a bridge along your route!"});
-      infowindow.open(map, marker1);
-    alert("WIN");
-    }
-    else {
-      console.log("error" + bridge);
-
-    }
-
- var northeast = boxes[i].getNorthEast();
- var southwest = boxes[i].getSouthWest();
- var lat_north = northeast.lat();
- var long_east = northeast.lng();
- var lat_south = southwest.lat();
- var long_west = southwest.lng();
-
-var latlng1 =  new google.maps.LatLng(lat_south, long_west);
-var latlng2 = new google.maps.LatLng(lat_south, long_east);
-var latlng3 = new google.maps.LatLng(lat_north, long_east);
-var latlng4 = new google.maps.LatLng(lat_north, long_west);
-
-
-var myBox = [latlng1, latlng2, latlng3, latlng4];
-
-
-var bounds = new google.maps.LatLngBounds(southwest, northeast);
-
-var withinBox = new google.maps.Polygon({
-    paths: myBox
-  });
-
-
-}
-
-
 //routeboxer
  clearBoxes();
 
@@ -131,9 +85,54 @@ var withinBox = new google.maps.Polygon({
       document.getElementById('boxes').innerHTML = "<b>Boxes along this route:  (" + boxes.length + " total</b>)"; + boxes;
 
 
+<% @markers.each do |m| %> 
+  var bridge1 = new google.maps.LatLng(<%= m.latitude %>, <%= m.longitude %>);  
+  var marker1 = new google.maps.Marker({position: bridge1, map:map});
+  
+for (var i = 0; i < boxes.length; i++) {
 
+
+ var northeast = boxes[i].getNorthEast();
+ var southwest = boxes[i].getSouthWest();
+ var lat_north = northeast.lat();
+ var long_east = northeast.lng();
+ var lat_south = southwest.lat();
+ var long_west = southwest.lng();
+
+var latlng1 =  new google.maps.LatLng(lat_south, long_west);
+var latlng2 = new google.maps.LatLng(lat_south, long_east);
+var latlng3 = new google.maps.LatLng(lat_north, long_east);
+var latlng4 = new google.maps.LatLng(lat_north, long_west);
+
+
+var myBox = [latlng1, latlng2, latlng3, latlng4];
+
+   // var marker = new google.maps.Marker({position: latlng1, map:map});
+   // var marker = new google.maps.Marker({position: latlng2, map:map});
+   // var marker = new google.maps.Marker({position: latlng3, map:map});
+   // var marker = new google.maps.Marker({position: latlng4, map:map});
+
+var bounds = new google.maps.LatLngBounds(southwest, northeast);
+
+var withinBox = new google.maps.Polygon({
+    paths: myBox
+  });
+
+if(google.maps.geometry.poly.containsLocation(bridge1, withinBox)){
+  var infowindow = new google.maps.InfoWindow({content: "Bridge!  <%= m.height %>"});
+      infowindow.open(map, marker1);
+    }
+  if (<%= @vehicle.height %> > <%= m.height %>) {
+    console.log("Too High");
+  }
+  else {
+    console.log("OK");
+  }
+}
+<% end %>
 });
 
+  //routeboxer
   function drawBoxes(boxes) {
       boxpolys = new Array(boxes.length);
       for (var i = 0; i < boxes.length; i++) {
@@ -159,7 +158,7 @@ var withinBox = new google.maps.Polygon({
     }
 }
 
-	
+  
 function computeTotalDistance(result) {
   var total = 0;
   var myroute = result.routes[0];
@@ -173,7 +172,7 @@ function computeTotalDistance(result) {
 
 }
   
-	  google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.addDomListener(window, 'load', initialize);
 
     </script>
  
@@ -184,9 +183,9 @@ function computeTotalDistance(result) {
 
   <H2>  Please enter your starting point and destination </H2>
   <form id= "routeform"> <b>
-      <label for="start">Start point:</label><input type="text" id="start" value="Cork"> <br>
-      <label for="stop">Stop point:</label><input type="text" id="stop" value="Midleton"> <br>
-      <label for="dest">Destination:</label><input type="text" id="dest" value="Waterford">  <br>
+      <label for="start">Start point:</label><input type="text" id="start" value="Mullingar"> <br>
+      <label for="stop">Stop point:</label><input type="text" id="stop" value="Delvin"> <br>
+      <label for="dest">Destination:</label><input type="text" id="dest" value="Athboy">  <br>
   </b></form>
   </div>
   <p id="p2"><b><span id="total"></span></b></p>
