--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,7 +74,14 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
  </center>
 
-
+</body>
+<center>
+<% if !adminsigned_in? %>
+<%= link_to "Admin Log In", adminsignin_path %>
+      <% else %>
+<%= link_to "Admin Log Out", adminsignout_path %>
+<% end %>
+</center>
  <div  style="float:left;width:45%; height:50%; margin:2%">
   <a class="twitter-timeline" href="https://twitter.com/aaroadwatch" data-widget-id="433665295937327104" style="float:left;">Tweets by @aaroadwatch</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -83,4 +90,4 @@ google.maps.event.addDomListener(window, 'load', initialize);
 <a class="twitter-timeline" href="https://twitter.com/GardaTraffic" data-widget-id="433673439446962176">Tweets by @GardaTraffic</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
 </div>
-</body>
+
