--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
     <%= f.password_field :password_confirmation %><br />
   </div>
    <div class="field">
-      profile picture uploader:
+      Profile picture uploader: <br />
        <%= f.file_field :profileImage %>
   </div>
   <div class="actions">
